--- a/resumes/jeffrey.hellrung.research.tex
+++ b/resumes/jeffrey.hellrung.research.tex
@@ -115,12 +115,12 @@ Graduated with High Distinction, Honors in Mathematics %\\
 {\small PUBLICATIONS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' 2011. (submitted)
-\par \textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, February 2012. (DOI:10.1016/j.jcp.2011.11.023)
-\par C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' International Journal for Numerical Methods in Engineering. Volume 88, Issue 10, pages 1042-1065, 9 December 2011. (DOI:10.1002/nme.3211)
-\par \textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ``Geometric fracture modeling in Bolt.'' SIGGRAPH 2009: Talks. (DOI:10.1145/1597990.1597997)
-\par E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' Studies in Health Technology and Informatics 2009; 142:313-8. (PMID:19377176)
-\par M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006. Pages 409 - 415. (DOI:10.1109/RAMS.2006.1677409)
+\par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M. Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)
+\par \textbf{Jeffrey Lee Hellrung, Jr.}, Luming Wang, Eftychios Sifakis, and Joseph M. Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4): 2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023
+\par Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M. Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211
+\par \textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in Bolt.'' \textit{SIGGRAPH 2009: Talks}, SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997
+\par Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph Teran, Aaron Oliker, Court Cutting, M.D. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' \textit{Studies in Health Technology and Informatics}, 142:313--318, 2009. PMID:19377176
+\par M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' \textit{Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006}, pp. 409--415, 2006. DOI:10.1109/RAMS.2006.1677409
 \end{minipage}
 \end{tabular}
 
