--- a/resumes/jeffrey.hellrung.programming.tex
+++ b/resumes/jeffrey.hellrung.programming.tex
@@ -115,7 +115,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
 \par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M. Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)
-\par \textbf{Jeffrey Lee Hellrung, Jr.}, Luming Wang, Eftychios Sifakis, and Joseph M. Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4): 2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023
+\par \textbf{Jeffrey Lee Hellrung, Jr.}, Luming Wang, Eftychios Sifakis, Joseph M. Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4): 2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023
 \par Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M. Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211
 \par \textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009: Talks}, SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997
 \par Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph Teran, Aaron Oliker, Court Cutting, M.D. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' \textit{Studies in Health Technology and Informatics}, 142:313--318, 2009. PMID:19377176
