--- a/courses/pcmi/2010/teran/notes/notes.bib
+++ b/courses/pcmi/2010/teran/notes/notes.bib
@@ -1,3 +1,5 @@
+%url = {http://dx.doi.org/10.1145/1028523.1028541},
+%doi = {http://dx.doi.org/10.1145/1028523.1028541},
 @inproceedings{Irving04,
  author = {Irving, G. and Teran, J. and Fedkiw, R.},
  title = {Invertible finite elements for robust simulation of large deformation},
@@ -8,13 +10,13 @@
  location = {Grenoble, France},
  pages = {131--140},
  numpages = {10},
- url = {http://dx.doi.org/10.1145/1028523.1028541},
- doi = {http://dx.doi.org/10.1145/1028523.1028541},
  acmid = {1028541},
  publisher = {Eurographics Association},
  address = {Aire-la-Ville, Switzerland, Switzerland},
 }
 
+%url = {http://doi.acm.org/10.1145/1073368.1073394},
+%doi = {10.1145/1073368.1073394},
 @inproceedings{Teran05a,
  author = {Teran, Joseph and Sifakis, Eftychios and Irving, Geoffrey and Fedkiw, Ronald},
  title = {Robust quasistatic finite elements and flesh simulation},
@@ -25,13 +27,13 @@
  location = {Los Angeles, California},
  pages = {181--190},
  numpages = {10},
- url = {http://doi.acm.org/10.1145/1073368.1073394},
- doi = {10.1145/1073368.1073394},
  acmid = {1073394},
  publisher = {ACM},
  address = {New York, NY, USA},
 }
 
+%url = {http://dx.doi.org/10.1109/TVCG.2005.42},
+%doi = {10.1109/TVCG.2005.42},
 @article{Teran05b,
  author = {Teran, Joseph and Sifakis, Eftychios and Blemker, Silvia S. and Ng-Thow-Hing, Victor and Lau, Cynthia and Fedkiw, Ronald},
  title = {Creating and Simulating Skeletal Muscle from the Visible Human Data Set},
@@ -44,14 +46,14 @@
  issn = {1077-2626},
  pages = {317--328},
  numpages = {12},
- url = {http://dx.doi.org/10.1109/TVCG.2005.42},
- doi = {10.1109/TVCG.2005.42},
  acmid = {1053688},
  publisher = {IEEE Educational Activities Department},
  address = {Piscataway, NJ, USA},
  keywords = {Index Terms- Finite volume methods, constructive solid geometry, physically-based modeling.},
 }
 
+%url = {http://dl.acm.org/citation.cfm?id=1140961.1140963},
+%doi = {10.1016/j.gmod.2005.03.007},
 @article{Irving06,
  author = {Irving, G. and Teran, J. and Fedkiw, R.},
  title = {Tetrahedral and hexahedral invertible finite elements},
@@ -63,16 +65,25 @@
  issn = {1524-0703},
  pages = {66--89},
  numpages = {24},
- url = {http://dl.acm.org/citation.cfm?id=1140961.1140963},
- doi = {10.1016/j.gmod.2005.03.007},
  acmid = {1140963},
  publisher = {Academic Press Professional, Inc.},
  address = {San Diego, CA, USA},
  keywords = {finite elements, hexahedral elements, inversion, large deformation, plasticity, shells, stability, tetrahedral elements, volumetric solids},
 }
 
-@article{Bonet_Wood_2008, title={Nonlinear Continuum Mechanics for Finite Element Analysis}, volume={24}, url={http://ebooks.cambridge.org/ref/id/CBO9780511755446}, number={11}, journal={Communications in Numerical Methods in Engineering}, publisher={Cambridge University Press}, author={Bonet, Javier and Wood, Richard D}, year={2008}, pages={1567--1568}}
+%url={http://ebooks.cambridge.org/ref/id/CBO9780511755446},
+@article{Bonet_Wood_2008,
+ title={Nonlinear Continuum Mechanics for Finite Element Analysis},
+ volume={24},
+ number={11},
+ journal={Communications in Numerical Methods in Engineering},
+ publisher={Cambridge University Press},
+ author={Bonet, Javier and Wood, Richard D.},
+ year={2008},
+ pages={1567--1568},
+}
 
+%URL = {http://www.biomedsearch.com/nih/Local-flaps-real-time-finite/19377176.html},
 @Article{Sifakis09,
 AUTHOR = {Sifakis, Eftychios and Hellrung, Jeffrey and Teran, Joseph and Oliker, Aaron and Cutting, Court},
 TITLE = {Local flaps: a real-time finite element based solution to the plastic surgery defect puzzle.},
@@ -81,7 +92,6 @@ VOLUME = {142},
 YEAR = {2009},
 NUMBER = {},
 PAGES = {313-8},
-URL = {http://www.biomedsearch.com/nih/Local-flaps-real-time-finite/19377176.html},
 PubMedID = {19377176},
 ISSN = {0926-9630},
 }
