correcting missing mu's and removing errant commas

--- a/dissertation/partII/partII.tex
+++ b/dissertation/partII/partII.tex
@@ -60,7 +60,7 @@ In linear elasticity, the stress $\bssigma(\bfu)$ is linearly dependent on the C
 Therefore, \eqref{eq:partII.elasticity} is equivalently formulated as
 \begin{subequations} \label{eq:partII.LE}
 \begin{align}
--\lrp{\Delta \bfI + (\lambda + \mu) \nabla \nabla^t} \bfu & = \bff \quad \in \Omega \label{eq:partII.LE.PDE} \\
+-\lrp{\mu \Delta \bfI + (\lambda + \mu) \nabla \nabla^t} \bfu & = \bff \quad \in \Omega \label{eq:partII.LE.PDE} \\
 \bfu & = \bfu_0 \quad \in \dOmega_d \label{eq:partII.LE.D} \\
 \mu \lrp{\bfu \cdot \hatn + \nabla \lrp{\bfu \cdot \hatn}} + \lambda \lrp{\nabla \cdot \bfu} \hatn & = \bfg \quad \in \dOmega_n \label{eq:partII.LE.N}.
 \end{align}
