--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -26,7 +26,7 @@ I wish to thank the following for their support over the last several years as I
 \item The rest of my entering class who've remained in the department as long as I have. Or longer.
 \end{itemize}
 
-Chapter~\ref{chap:partI.crackpropagation} is version (with moderate revisions) of ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials'' by Casey L. Richardson (PI), Jan Hegemann, Eftychios Sifakis, Jeffrey Hellrung, Joseph M. Teran in \textit{International Journal for Numerical Methods in Engineering} (88(10):1042--1065, 9 December 2011) (DOI:10.1002/\linebreak[0]nme.3211). This research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
+Chapter~\ref{chap:partI.crackpropagation} is a version (with moderate revisions) of ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials'' by Casey L. Richardson (PI), Jan Hegemann, Eftychios Sifakis, Jeffrey Hellrung, and Joseph M. Teran in \textit{International Journal for Numerical Methods in Engineering} (88(10):1042--1065, 9 December 2011) (DOI:10.1002/\linebreak[0]nme.3211). This research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
 
 Chapter~\ref{chap:partI.virtualsurgery} is a version (with minor revisions) of ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle'' by Eftychios Sifakis (PI), Jeffrey Hellrung, Joseph Teran, Aaron Oliker, and Court Cutting,~M.D. in \textit{Studies in Health Technology and Informatics} (142:313--318, 2009) (PMID:19377176).
 
@@ -73,9 +73,9 @@ The research in Chapters~\ref{chap:partII.poisson} and \ref{chap:partII.LE} was 
 \award{Google Games Santa Monica - 3$^{rd}$ place (2011)}
 
 \abstract{
-We present a collection of embedded methods to solve a variety of scientific computing problems in both $2$ and $3$ dimensions. Embedded methods make use a structured background mesh which does not conform to the irregular geometry of the problem, such as the domain boundary. Instead, the irregular geometry is embedded within the structured mesh's elements, providing a framework to solve many problems involving crack propagation, progressive fracturing, dynamic interfaces, and shape optimization.
+We present a collection of embedded methods to solve a variety of scientific computing problems in both $2$ and $3$ dimensions. Embedded methods make use of a structured background mesh which does not conform to the irregular geometry of the problem, such as the domain boundary. Instead, the irregular geometry is embedded within the structured mesh's elements, providing a framework to solve many problems involving crack propagation, progressive fracturing, dynamic interfaces, and shape optimization.
 
-In Part I, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to investigate the modeling of cracks, surgical incisions, and shattering. Specifically, we present a geometrically flexible and straightforward crack propagation method which combines the \emph{eXtended Finite Element Method} (XFEM) with \cite{Sifakis07} and an innovative integration scheme which makes use of a subordinate quadrature mesh. We also discuss the application of \cite{Sifakis07} and other advances in numerical methods to address the challenges of a virtual surgery simulator. We conclude Part I by describing a system to facilitate the modeling cracked and shattered objects in the context of visual effects and computer animation.
+In Part I, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to investigate the modeling of cracks, surgical incisions, and shattering. Specifically, we present a geometrically flexible and straightforward crack propagation method which combines the \emph{eXtended Finite Element Method} (XFEM) with \cite{Sifakis07} and an innovative integration scheme which makes use of a subordinate quadrature mesh. We also discuss the application of \cite{Sifakis07} and other advances in numerical methods to address the challenges of a virtual surgery simulator. We conclude Part I by describing a system to facilitate the modeling of cracked and shattered objects in the context of visual effects and computer animation.
 
-In Part II, we present a numerical method utilizing virtual degrees of freedom to efficiently solve elliptic partial differential equations (specifically: Poisson's equation with interfacial jump conditions; and linear elasticity in the nearly incompressible regime) on irregular domains within a regular background Cartesian grid. Our method enforces Dirichlet boundary conditions and interfacial jump conditions weakly, formulating our system as a constrained minimization problem. In this context, we describe an algorithm to generate an associated discrete Lagrange multiplier space that allows one to derive an equivalent symmetric positive definite linear system. We provide a family of multigrid algorithms to solve this linear system with near optimal efficiency. Our method is second order accurate in $L^{\infty}$ and possesses a feature set rarely found among the class of embedded methods.
+In Part II, we present a numerical method utilizing virtual degrees of freedom to efficiently solve elliptic partial differential equations (specifically: Poisson's equation with interfacial jump conditions; and linear elasticity in the nearly incompressible regime) on irregular domains within a regular background Cartesian grid. Our method enforces Dirichlet boundary conditions and interfacial jump conditions weakly, formulating our system as a constrained minimization problem. In this context, we describe an algorithm to generate an associated discrete Lagrange multiplier space that allows one to derive an equivalent symmetric positive definite linear system. We provide a family of multigrid algorithms to solve this linear system with near optimal efficiency. Our method is second order accurate in $L^{\infty}$ and possesses a feature set rarely found among the broad class of embedded methods for elliptic problems.
 }
