--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -26,17 +26,17 @@ I wish to thank the following for their support over the last several years as I
 \item The rest of my entering class who've remained in the department as long as I have. Or longer.
 \end{itemize}
 
-Chapter~\ref{chap:partI.crackpropagation} is a version (with moderate revisions) of ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials'' by Casey L. Richardson (PI), Jan Hegemann, Eftychios Sifakis, Jeffrey Hellrung, and Joseph M. Teran in \textit{International Journal for Numerical Methods in Engineering} (88(10):1042--1065, 9 December 2011) (DOI:10.1002/\linebreak[0]nme.3211). This research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
+The research in Chapters~\ref{chap:partI.crackpropagation}, \ref{chap:partII.poisson}, and \ref{chap:partII.LE} was partially supported by UC Lab Fees Research / Department of Energy grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grant CCF-0830554. Additionally, the research in Chapter~\ref{chap:partI.crackpropagation} was partially supported by National Science Foundation grant DMS-0914813; and the research in Chapters~\ref{chap:partII.poisson} and \ref{chap:partII.LE} by National Science Foundation grants DMS-0502315 and DMS-0652427.
 
-Chapter~\ref{chap:partI.virtualsurgery} is a version (with minor revisions) of ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle'' by Eftychios Sifakis (PI), Jeffrey Hellrung, Joseph Teran, Aaron Oliker, and Court Cutting,~M.D. in \textit{Studies in Health Technology and Informatics} (142:313--318, 2009) (PMID:19377176).
+Chapter~\ref{chap:partI.crackpropagation} is a version (with moderate revisions) of ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials'' by Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, Jeffrey Hellrung, and Joseph M. Teran (PI) in \textit{International Journal for Numerical Methods in Engineering} (88(10):1042--1065, 9 December 2011) (DOI:10.1002/\linebreak[0]nme.3211).
+
+Chapter~\ref{chap:partI.virtualsurgery} is a version (with minor revisions) of ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle'' by Eftychios Sifakis, Jeffrey Hellrung, Joseph Teran (PI), Aaron Oliker, and Court Cutting,~M.D. in \textit{Studies in Health Technology and Informatics} (142:313--318, 2009) (PMID:19377176).
 
 Chapter~\ref{chap:partI.fractureanimation} is a version (with minor revisions) of ``Geometric fracture modeling in BOLT'' by Jeffrey Hellrung (PI), Andrew Selle, Arthur Shek, Eftychios Sifakis, and Joseph Teran in \textit{SIGGRAPH 2009: Talks} (SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009) \linebreak[4] (DOI:10.1145/1597990.1597997). This research was supported by Walt Disney Animation Studios.
 
-Chapter~\ref{chap:partII.poisson} is a version (with moderate revisions) of ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions'' by Jeffrey Lee Hellrung,~Jr. (PI), Luming Wang, Eftychios Sifakis, and Joseph M. Teran in \textit{Journal of Computational Physics} (231(4):2015--2048, February 2012) (DOI:10.1016/j.jcp.2011.11.023). I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions; and Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission.
+Chapter~\ref{chap:partII.poisson} is a version (with moderate revisions) of ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions'' by Jeffrey Lee Hellrung,~Jr., Luming Wang, Eftychios Sifakis, and Joseph M. Teran (PI) in \textit{Journal of Computational Physics} (231(4):2015--2048, February 2012) (DOI:10.1016/j.jcp.2011.11.023). I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions; and Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission.
 
-Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains'' by Yongning Zhu (PI), Yuting Wang, Jeffrey Hellrung, Alejandro Cantarero, Eftychios Sifakis, and Joseph M. Teran (submitted for publication, 2011).
-
-The research in Chapters~\ref{chap:partII.poisson} and \ref{chap:partII.LE} was supported in part by National Science Foundation grants DMS-0502315, DMS-0652427, and CCF-0830554; Department of Energy grant 09-LR-04-116741-BERA; and Office of Naval Research grants N000140310071 and N000141010730.
+Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains'' by Yongning Zhu, Yuting Wang, Jeffrey Hellrung, Alejandro Cantarero, Eftychios Sifakis, and Joseph M. Teran (PI) (submitted for publication, 2011).
 }
 
 \vitaitem{2003, summer}{Research Student for Associate Professor Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
