minor formatting adjustments

--- a/resumes/jeffrey.hellrung.programming.tex
+++ b/resumes/jeffrey.hellrung.programming.tex
@@ -65,7 +65,7 @@ Los Angeles, CA \ 90025-5699 \hfill (801) 920-8773
 \begin{minipage}[t]{\CWb\columnwidth}
 \par \textbf{University of California Los Angeles, Los Angeles, CA} \\
 Master of Arts in Mathematics, June 2006 \hfill \textbf{GPA} : 3.909 \\
-Ph.D. in Mathematics, June 2012 (expected) \hfill \textbf{GPA} : 3.951%\\
+Ph.D.\ in Mathematics, June 2012 (expected) \hfill \textbf{GPA} : 3.951%\\
 %\textbf{Coursework} : algebraic topology, algorithms, approximation algorithms, asymptotic methods (2 quar), combinatorics (2 quar), complex analysis (2 quar), computational fluid dynamics, computational linear algebra, continuum mechanics, control and optimization, differential equations (3 quar), differential geometry, differential topology, distributed algorithms, Fourier analysis, Lie groups and Lie algebras, numerical analysis (3 quar), real analysis (4 quar), scientific computing
 \vspace{\VS}
 \par \textbf{Harvey Mudd College, Claremont, CA} \hfill \textbf{Overall GPA} : 3.858 \\
@@ -89,7 +89,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \vspace{\VSEX}
 \par \textbf{Walt Disney Animation Studios}, Burbank, CA; summer 2008. Created a Maya plugin front-end and developed the back-end algorithms to volumetrically fracture non-volumetric (i.e., quad surface) animation models.
 \vspace{\VSEX}
-\par \textbf{The Aerospace Corporation}, El Segundo, CA; summer 2005, 2006, 2007. Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering). Created and modified existing code in C, C{\tt ++}, and Perl. Used Qt 4 to develop cross-platform graphical user interfaces in C{\tt ++}. Designed and prototyped several algorithms to solve satellite positioning problems.
+\par \textbf{The Aerospace Corporation}, El Segundo, CA; summer 2005, 2006, 2007. Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering). Created and modified existing code in C, C\texttt{++}, and Perl. Used Qt 4 to develop cross-platform graphical user interfaces in C\texttt{++}. Designed and prototyped several algorithms to solve satellite positioning problems.
 \vspace{\VSEX}
 \par \textbf{Clinic Project Manager serving Hewlett-Packard}, HMC, Claremont, CA; 2004 -- 2005. Headed a team of four to deliver to HP Labs several tools written in Matlab$^{\text{(R)}}$ to analyze and correct printer drift, as well as mid-year and final reports detailing our approaches. Presented our findings at Harvey Mudd College and directly to Hewlett-Packard in Palo Alto, CA.
 \vspace{\VSEX}
@@ -103,7 +103,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 %\par \textbf{Mathematics 173 (Advanced Linear Algebra) Grader, HMC, Claremont, CA; spring 2005. Graded course assignments.
 %\par \textbf{Mathematics 055 (Discrete Mathematics) Grader/Tutor}, HMC, Claremont, CA; fall 2002. Graded course assignments; tutored students in discrete mathematics.
 \par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2003. Attended lectures on wavelets, partial differential equations, and Fourier analysis.
-%\par \textbf{Carpet Installer Assistant for R.C. Willey}, Riverdale, UT, summer 2002. Pulled up old carpet, padded, laid carpet, stretched, and trimmed.
+%\par \textbf{Carpet Installer Assistant for R.C.\ Willey}, Riverdale, UT, summer 2002. Pulled up old carpet, padded, laid carpet, stretched, and trimmed.
 %\par \textbf{Summer Mathematics Camp}, University of Utah, Salt Lake City, UT, summer 2000. Studied number theory, graph theory, knot theory, geometry.
 \end{minipage}
 \end{tabular}
@@ -114,12 +114,12 @@ Graduated with High Distinction, Honors in Mathematics %\\
 {\small PUBLICATIONS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M. Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)
-\par \textbf{Jeffrey Lee Hellrung, Jr.}, Luming Wang, Eftychios Sifakis, Joseph M. Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4): 2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023
-\par Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M. Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211
-\par \textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009: Talks}, SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997
-\par Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph Teran, Aaron Oliker, Court Cutting, M.D. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' \textit{Studies in Health Technology and Informatics}, 142:313--318, 2009. PMID:19377176
-\par M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' \textit{Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006}, pp. 409--415, 2006. DOI:10.1109/RAMS.2006.1677409
+\par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)
+\par \textbf{Jeffrey Lee Hellrung, Jr.}, Luming Wang, Eftychios Sifakis, Joseph M.\ Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4):2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023
+\par Casey L.\ Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M.\ Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211
+\par \textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009:\ Talks}, SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997
+\par Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph Teran, Aaron Oliker, Court Cutting, M.D. ``Local Flaps:\ A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' \textit{Studies in Health Technology and Informatics}, 142:313--318, 2009. PMID:19377176
+\par M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' \textit{Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006}, pp.\ 409--415, 2006. DOI:10.1109/RAMS.2006.1677409
 \end{minipage}
 \end{tabular}
 
@@ -137,9 +137,9 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \par Microsoft Imagine Cup Algorithm Invitational - $18^{th}$ place internationally (2004)
 \par MCM (Mathematical Contest in Modeling) - Meritorious Winner (2004)
 \par ACM (Association for Computing Machinery) Programming Contest - $7^{th}$ / 63 place (2004) and $20^{th}$ / 59 place (2003)
-%member of the MAA since 01/01/03; score of 10 on A.S.A. Actuarial Examination, Course 1, from the Society of Actuaries, 2003; National AP Scholar; Academic Olympiad at Utah State University, Mar 2001 - gold medal in Mathematics, bronze medal in Science; Utah State Math Contest, Mar 2000 - 4th place in state
+%member of the MAA since 01/01/03; score of 10 on A.S.A.\ Actuarial Examination, Course 1, from the Society of Actuaries, 2003; National AP Scholar; Academic Olympiad at Utah State University, Mar 2001 - gold medal in Mathematics, bronze medal in Science; Utah State Math Contest, Mar 2000 - 4th place in state
 \par Stavros Busenberg Prize in Applied Mathematics (awarded by HMC) (2004)
-\par Courtney S. Coleman Prize in Mathematics (awarded by HMC) (2003)
+\par Courtney S.\ Coleman Prize in Mathematics (awarded by HMC) (2003)
 \par HMC Dean's List, 2002 -- 2004
 \end{minipage}
 \end{tabular}
