--- a/resumes/jeffrey.hellrung.references.tex
+++ b/resumes/jeffrey.hellrung.references.tex
@@ -104,7 +104,7 @@ Taught extracurricular mathematics to middle school and high school students. In
 
 \begin{flushleft}
 Walt Disney Animation Studios \\
-500 S. Buena Vista Street \\
+500 S.\ Buena Vista Street \\
 Burbank, CA \ 91521-4850 \\
 \verb+http://www.disneyanimation.com/+ \\
 \end{flushleft} &
@@ -136,13 +136,13 @@ El Segundo, CA \ 90245-4691 \\
 \verb+http://www.aero.org/+ \\
 \end{flushleft} &
 \begin{flushleft}
-Justin F. McNeill \\
+Justin F.\ McNeill \\
 Engineering Manager \\
 Software Assurance and Applications Department \\
 (310) 336-7794 \\
 \verb+Justin.F.McNeill@aero.org+ \\
 \vspace{4pt}
-William R. Pittman \\
+William R.\ Pittman \\
 Engineering Manager \\
 Software Assurance and Applications Department \\
 (310) 336-1243 \\
@@ -168,7 +168,7 @@ to \\
 Professional Non-Exempt Member of the Technical Staff Level 1 \\
 \end{center} &
 \begin{flushleft}
-Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering).  Created and modified existing code in C, C{\tt ++}, and Perl.  Used Qt 4 to develop cross-platform graphical user interfaces in C{\tt ++}.  Designed and prototyped mathematical algorithms to solve problems.
+Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering).  Created and modified existing code in C, C\texttt{++}, and Perl.  Used Qt 4 to develop cross-platform graphical user interfaces in C\texttt{++}.  Designed and prototyped mathematical algorithms to solve problems.
 \end{flushleft} \\
 
 \begin{flushleft}
@@ -197,18 +197,18 @@ Tutored students in a wide variety of subjects, including high school mathematic
 
 \begin{flushleft}
 Hewlett-Packard Company \\
-1501 Page Mill Road, Bldg. 2u \\
+1501 Page Mill Road, Bldg.\ 2u \\
 Palo Alto, CA \ 94304-1126 \\
 \verb+http://www.hpl.hp.com/+ \\
 (via Harvey Mudd College Mathematics Clinic) \\
 (\verb+http://www.math.hmc.edu/clinic/+) \\
 \end{flushleft} &
 \begin{flushleft}
-Gary J. Dispoto \\
+Gary J.\ Dispoto \\
 Department Manager \\
 Color \& Precision Imaging \\
 Hewlett-Packard Company \\
-1501 Page Mill Road, Bldg. 2u, ms 1160 \\
+1501 Page Mill Road, Bldg.\ 2u, ms 1160 \\
 Palo Alto, CA \ 94304-1126 \\
 (650) 857-5005 (voice) \\
 (650) 857-4320 (fax) \\
@@ -279,7 +279,7 @@ Claremont, CA \ 91711-5901 \\
 \verb+info@math.hmc.edu+ \\
 \end{flushleft} &
 \begin{flushleft}
-Jon T. Jacobsen \\
+Jon T.\ Jacobsen \\
 Assistant Professor of Mathematics at Harvey Mudd College \\
 (909) 607-7690 (voice) \\
 (909) 621-8366 (fax) \\
@@ -380,7 +380,7 @@ Additional References
 \endhead
 
 \begin{flushleft}
-David Y. Stodden \\
+David Y.\ Stodden \\
 \end{flushleft} &
 \begin{center}
 customer \\
@@ -396,7 +396,7 @@ The Aerospace Corporation \\
 \end{flushleft} \\
 
 \begin{flushleft}
-John M. Coggi \\
+John M.\ Coggi \\
 \end{flushleft} &
 \begin{center}
 customer \\
@@ -412,7 +412,7 @@ The Aerospace Corporation \\
 \end{flushleft} \\
 
 \begin{flushleft}
-Myron J. Hecht \\
+Myron J.\ Hecht \\
 \end{flushleft} &
 \begin{center}
 customer \\
@@ -428,7 +428,7 @@ The Aerospace Corporation \\
 \end{flushleft} \\
 
 \begin{flushleft}
-Douglas J. Buettner \\
+Douglas J.\ Buettner \\
 \end{flushleft} &
 \begin{center}
 customer \\
@@ -444,7 +444,7 @@ The Aerospace Corporation \\
 \end{flushleft} \\
 
 \begin{flushleft}
-Willard D. Downs III \\
+Willard D.\ Downs III \\
 \end{flushleft} &
 \begin{center}
 mentor \\
@@ -460,7 +460,7 @@ The Aerospace Corporation \\
 \end{flushleft} \\
 
 \begin{flushleft}
-Andrew J. Bernoff \\
+Andrew J.\ Bernoff \\
 \end{flushleft} &
 \begin{center}
 teacher, mentor \\
