--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -11,7 +11,7 @@
 
 % Committee
 \chair{Joseph M.\ Teran}
-\member{Chris Anderson}
+\member{Christopher R.\ Anderson}
 \member{Stanley J.\ Osher}
 \member{Demetri Terzopoulos}
 
@@ -28,40 +28,40 @@ I wish to thank the following for their support over the last several years as I
 
 The research in Chapters~\ref{chap:partI.crackpropagation}, \ref{chap:partII.poisson}, and \ref{chap:partII.LE} was partially supported by UC Lab Fees Research / Department of Energy grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grant CCF-0830554. Additionally, the research in Chapter~\ref{chap:partI.crackpropagation} was partially supported by National Science Foundation grant DMS-0914813; and the research in Chapters~\ref{chap:partII.poisson} and \ref{chap:partII.LE} by National Science Foundation grants DMS-0502315 and DMS-0652427.
 
-Chapter~\ref{chap:partI.crackpropagation} is a version (with moderate revisions) of ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials'' by Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, Jeffrey Hellrung, and Joseph M. Teran (PI) in \textit{International Journal for Numerical Methods in Engineering} (88(10):1042--1065, 9 December 2011) (DOI:10.1002/\linebreak[0]nme.3211).
+Chapter~\ref{chap:partI.crackpropagation} is a version (with moderate revisions) of ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials'' by Casey L.\ Richardson, Jan Hegemann, Eftychios Sifakis, Jeffrey Hellrung, and Joseph M.\ Teran (PI) in \textit{International Journal for Numerical Methods in Engineering} (88(10):1042--1065, 9 December 2011) (DOI:10.1002/\linebreak[0]nme.3211).
 
-Chapter~\ref{chap:partI.virtualsurgery} is a version (with minor revisions) of ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle'' by Eftychios Sifakis, Jeffrey Hellrung, Joseph Teran (PI), Aaron Oliker, and Court Cutting,~M.D. in \textit{Studies in Health Technology and Informatics} (142:313--318, 2009) (PMID:19377176).
+Chapter~\ref{chap:partI.virtualsurgery} is a version (with minor revisions) of ``Local Flaps:\ A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle'' by Eftychios Sifakis, Jeffrey Hellrung, Joseph Teran (PI), Aaron Oliker, and Court Cutting,~M.D.\ in \textit{Studies in Health Technology and Informatics} (142:313--318, 2009) (PMID:19377176).
 
-Chapter~\ref{chap:partI.fractureanimation} is a version (with minor revisions) of ``Geometric fracture modeling in BOLT'' by Jeffrey Hellrung (PI), Andrew Selle, Arthur Shek, Eftychios Sifakis, and Joseph Teran in \textit{SIGGRAPH 2009: Talks} (SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009) \linebreak[4] (DOI:10.1145/1597990.1597997). This research was supported by Walt Disney Animation Studios.
+Chapter~\ref{chap:partI.fractureanimation} is a version (with minor revisions) of ``Geometric fracture modeling in BOLT'' by Jeffrey Hellrung (PI), Andrew Selle, Arthur Shek, Eftychios Sifakis, and Joseph Teran in \textit{SIGGRAPH 2009:\ Talks} (SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009) \linebreak[4] (DOI:10.1145/1597990.1597997). This research was supported by Walt Disney Animation Studios.
 
-Chapter~\ref{chap:partII.poisson} is a version (with moderate revisions) of ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions'' by Jeffrey Lee Hellrung,~Jr., Luming Wang, Eftychios Sifakis, and Joseph M. Teran (PI) in \textit{Journal of Computational Physics} (231(4):2015--2048, February 2012) (DOI:10.1016/j.jcp.2011.11.023). I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions; and Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission.
+Chapter~\ref{chap:partII.poisson} is a version (with moderate revisions) of ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions'' by Jeffrey Lee Hellrung,~Jr., Luming Wang, Eftychios Sifakis, and Joseph M.\ Teran (PI) in \textit{Journal of Computational Physics} (231(4):2015--2048, February 2012) (DOI:10.1016/j.jcp.2011.11.023). I wish to thank Jacob Bedrossian and James H.\ von Brecht for their helpful discussions; and Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission.
 
-Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains'' by Yongning Zhu, Yuting Wang, Jeffrey Hellrung, Alejandro Cantarero, Eftychios Sifakis, and Joseph M. Teran (PI) (submitted for publication, 2011).
+Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains'' by Yongning Zhu, Yuting Wang, Jeffrey Hellrung, Alejandro Cantarero, Eftychios Sifakis, and Joseph M.\ Teran (PI) (submitted for publication, 2011).
 }
 
-\vitaitem{2003, summer}{Research Student for Associate Professor Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
-\vitaitem{2004, summer}{Summer Intern at Auditude$^{\text{TM}}$, Inc. (Los Angeles, CA)}
+\vitaitem{2003, summer}{Research Student for Associate Professor Jon T.\ Jacobsen of Harvey Mudd College (Claremont, CA)}
+\vitaitem{2004, summer}{Summer Intern at Auditude$^{\text{TM}}$, Inc.\ (Los Angeles, CA)}
 \vitaitem{2004 - 2005}{Clinic Project Manager serving Hewlett-Packard Company (Palo Alto, CA) via Harvey Mudd College Mathematics Clinic}
 \vitaitem{2005, May}{Received degree of Bachelor of Science in Mathematics (with High Distinction, Honors in Mathematics) from Harvey Mudd College}
 \vitaitem{2005 - 2012}{Teaching Fellow for the Department of Mathematics, University of California Los Angeles}
-\vitaitem{2005, summer}{Prof. NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
+\vitaitem{2005, summer}{Prof.\ NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
 \vitaitem{2006, June}{Received degree of Master of Arts in Mathematics from University of California Los Angeles}
-\vitaitem{2006, summer}{Prof. NE MTS Level 1 at The Aerospace Corporation}
-\vitaitem{2007, summer}{Prof. NE MTS Level 1 at The Aerospace Corporation}
+\vitaitem{2006, summer}{Prof.\ NE MTS Level 1 at The Aerospace Corporation}
+\vitaitem{2007, summer}{Prof.\ NE MTS Level 1 at The Aerospace Corporation}
 \vitaitem{2008, summer}{Graduate Associate at Walt Disney Animation Studios (Burbank, CA)}
 \vitaitem{2010, summer}{Teaching Assistant at Park City Mathematics Institute (Park City, UT)}
 
-\publication{M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' \textit{Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006}, pp. 409--415, 2006. DOI:10.1109/RAMS.2006.1677409}
-\publication{Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph Teran, Aaron Oliker, Court Cutting,~M.D. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' \textit{Studies in Health Technology and Informatics}, 142:313--318, 2009. PMID:19377176}
-\publication{\textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009: Talks}, SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997}
-\publication{Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M. Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211}
-\publication{\textbf{Jeffrey Lee Hellrung,~Jr.}, Luming Wang, Eftychios Sifakis, Joseph M. Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4): 2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023}
-\publication{Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M. Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)}
+\publication{M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' \textit{Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006}, pp.\ 409--415, 2006. DOI:10.1109/RAMS.2006.1677409}
+\publication{Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph Teran, Aaron Oliker, Court Cutting,~M.D. ``Local Flaps:\ A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' \textit{Studies in Health Technology and Informatics}, 142:313--318, 2009. PMID:19377176}
+\publication{\textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009:\ Talks}, SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997}
+\publication{Casey L.\ Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M.\ Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211}
+\publication{\textbf{Jeffrey Lee Hellrung,~Jr.}, Luming Wang, Eftychios Sifakis, Joseph M.\ Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4):2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023}
+\publication{Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)}
 
 %\presentation{}
 
 \award{William Lowell Putnam Mathematical Competition - Top-500 Individual Placement (2001, 2004); Top-200 Individual Placement (2002, 2003); 11$^{th}$ Team Placement (2004)}
-\award{Courtney S. Coleman Prize in Mathematics (awarded by HMC; 2003)}
+\award{Courtney S.\ Coleman Prize in Mathematics (awarded by HMC; 2003)}
 \award{ACM (Association for Computing Machinery) Programming Contest - 20$^{th}$ (of 59) place (2003); 7$^{th}$ (of 63) place (2004)}
 \award{MCM (Mathematical Contest in Modeling) - Meritorious Winner (2004)}
 \award{Microsoft Imagine Cup Algorithm Invitational - 18$^{th}$ place internationally (2004)}
