--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -32,7 +32,7 @@ Chapter~\ref{chap:partI.crackpropagation} is a version (with moderate revisions)
 
 Chapter~\ref{chap:partI.virtualsurgery} is a version (with minor revisions) of ``Local Flaps:\ A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle'' by Eftychios Sifakis, Jeffrey Hellrung, Joseph Teran (PI), Aaron Oliker, and Court Cutting,~M.D.\ in \textit{Studies in Health Technology and Informatics} (142:313--318, 2009) (PMID:19377176).
 
-Chapter~\ref{chap:partI.fractureanimation} is a version (with minor revisions) of ``Geometric fracture modeling in BOLT'' by Jeffrey Hellrung (PI), Andrew Selle, Arthur Shek, Eftychios Sifakis, and Joseph Teran in \textit{SIGGRAPH 2009:\ Talks} (SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009) \linebreak[4] (DOI:10.1145/1597990.1597997). This research was supported by Walt Disney Animation Studios.
+Chapter~\ref{chap:partI.fractureanimation} is a version (with minor revisions) of ``Geometric fracture modeling in BOLT'' by Jeffrey Hellrung, Andrew Selle, Arthur Shek, Eftychios Sifakis, and Joseph Teran (PI) in \textit{SIGGRAPH 2009:\ Talks} (SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009) \linebreak[4] (DOI:10.1145/1597990.1597997). This research was supported by Walt Disney Animation Studios.
 
 Chapter~\ref{chap:partII.poisson} is a version (with moderate revisions) of ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions'' by Jeffrey Lee Hellrung,~Jr., Luming Wang, Eftychios Sifakis, and Joseph M.\ Teran (PI) in \textit{Journal of Computational Physics} (231(4):2015--2048, February 2012) (DOI:10.1016/j.jcp.2011.11.023). I wish to thank Jacob Bedrossian and James H.\ von Brecht for their helpful discussions; and Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission.
 
